--- a/style.css
+++ b/style.css
@@ -2,11 +2,43 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
-
 img {
   width: 24px;
   height: 24px;
+}
+
+body {
+  margin: 0;
+
+  display: grid;
+  grid-template-columns: minmax(auto, 275px) 1fr;
+  grid-template-rows: auto 1fr;
+}
+
+aside {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+
+  background-color: antiquewhite;
+}
+
+header {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+
+  background-color: cadetblue;
+}
+
+main {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.projects {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
 }
