--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --bg-primary: #1992d4;
 }
 
 img {
@@ -11,15 +17,82 @@ body {
   margin: 0;
 
   display: grid;
-  grid-template-columns: minmax(auto, 275px) 1fr;
+  grid-template-columns: 250px 1fr;
+
   grid-template-rows: auto 1fr;
+
+  height: 100vh;
+  font-family: 'Roboto', sans-serif;
 }
 
 aside {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px 1fr;
+  height: 100%;
+  background-color: var(--bg-primary);
+}
 
-  background-color: antiquewhite;
+aside svg {
+  fill: white;
+  height: 20px;
+  width: 20px;
+}
+
+aside .brand svg {
+  height: 36px;
+  width: 36px;
+}
+
+aside > .brand {
+  padding: 12px 16px;
+}
+
+aside > .brand a {
+  display: grid;
+  grid-template-columns: 24px 1fr;
+  grid-template-rows: 1fr;
+  gap: 24px;
+  align-items: center;
+  text-decoration: none;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+}
+
+aside > nav {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content;
+  gap: 48px;
+}
+
+aside > nav > ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 40px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+aside > nav > ul > li {
+  padding: 8px 24px;
+}
+
+aside > nav > ul > li > a {
+  display: grid;
+  grid-template-columns: 24px 1fr;
+  grid-template-rows: 1fr;
+  gap: 16px;
+  align-items: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
 }
 
 header {
