--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header {
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 60px 1fr;
 }
 
 header svg {
@@ -168,15 +168,73 @@ header svg {
   background-color: #ccc;
 }
 
-.username {
-  display: grid;
-  align-items: center;
-  text-align: center;
-}
-
 .header-bottom {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding: 0 24px;
+  padding-bottom: 12px;
+}
+
+.header-bottom > .profile {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 16px;
+}
+
+
+.header-bottom > .profile > img {
+  background-color: #ccc;
+  height: 56px;
+  width: 56px;
+  border-radius: 100%;
+}
+
+.header-bottom > .profile > .greeting {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18px min-content;
+  align-content: center;
+  gap: 4px;
+}
+
+.header-bottom > .profile > .greeting > span {
+  display: grid;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.header-bottom > .profile > .greeting > .username {
+  display: grid;
+  align-items: center;
+  text-align: start;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.header-bottom > .profile > .greeting > .username a {
+  color: black;
+  text-decoration: none;
+}
+
+.header-bottom > .actions {
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  justify-content: flex-end;
+  align-items: center;
+  gap: 24px;
+}
+
+.header-bottom > .actions button {
+  border: 0;
+  border-radius: 24px;
+  color: white;
+  background-color: var(--bg-primary);
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 8px 24px;
 }
 
 main {
