--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 :root {
   --bg-primary: #1992d4;
   --bg-default: #e2e8f0;
+  --text-default: #212121;
+  --text-muted: #6b7280;
 }
 
 img {
@@ -165,7 +167,7 @@ header svg {
   height: 40px;
   width: 40px;
   border-radius: 100%;
-  background-color: #ccc;
+  background-color: var(--text-muted);
 }
 
 .header-bottom {
@@ -183,7 +185,7 @@ header svg {
 
 
 .header-bottom > .profile > img {
-  background-color: #ccc;
+  background-color: var(--text-muted);
   height: 56px;
   width: 56px;
   border-radius: 100%;
@@ -213,7 +215,7 @@ header svg {
 }
 
 .header-bottom > .profile > .greeting > .username a {
-  color: black;
+  color: var(--text-default);
   text-decoration: none;
 }
 
@@ -245,7 +247,7 @@ main {
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr;
 
-  background-color: cadetblue;
+  background-color: var(--bg-default);
 
   overflow: auto;
 }
@@ -253,4 +255,48 @@ main {
 .projects {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
+  padding: 12px 24px;
+}
+
+.project-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: max-content;
+  gap: 24px;
+}
+
+.project {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  gap: 24px;
+  background-color: white;
+  border-radius: 8px;
+  border-left: 8px solid orange;
+  padding: 24px;
+}
+
+.project > .description > p {
+  color: var(--text-muted);
+}
+
+.project > .actions {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  justify-content: flex-end;
+  gap: 16px;
+
+}
+
+.announcements {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.trending {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
