--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ body {
   margin: 0;
 
   display: grid;
-  grid-template-columns: 250px 1fr;
-
+  grid-template-columns: clamp(195px, 25%, 250px) 1fr;
   grid-template-rows: auto 1fr;
 
   height: 100vh;
@@ -244,11 +243,11 @@ main {
   grid-row: 2 / 3;
 
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr minmax(auto, 300px);
   grid-template-rows: 1fr 1fr;
-
+  gap: 24px;
+  padding: 12px 24px;
   background-color: var(--bg-default);
-
   overflow: auto;
 }
 
@@ -259,7 +258,6 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr;
-  padding: 12px 24px;
 }
 
 .project-container {
@@ -294,9 +292,82 @@ main {
 .announcements {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+.announcement-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  background-color: white;
+  padding: 24px;
+  border-radius: 8px;
+  gap: 16px;
+}
+
+.announcement {
+  display: grid;
+  gap: 8px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #ccc;
+}
+
+.announcement:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.announcement > h3 {
+  margin: 0;
+  font-size: 16px;
+  color: var(--text-default);
+}
+
+.announcement > p {
+  margin: 0;
+  font-size: 14px;
+  color: var(--text-muted);
 }
 
 .trending {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+.trending-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  background-color: white;
+  padding: 24px;
+  border-radius: 8px;
+  gap: 16px;
+}
+
+.trending-user {
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  grid-template-rows: repeat(2, auto);
+  gap: 16px;
+}
+
+.trending-user > img {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  background-color: var(--text-muted);
+}
+
+.trending-user > .user {
+  display: grid;
+  gap: 4px;
+}
+
+.trending-user > .user > div:nth-child(2) {
+  color: var(--text-muted);
 }
